kube/caddy-test-private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-private
  namespace: caddy-test
spec:
  ingressClassName: caddy-private
  rules:
    - host: "*.vms.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-test
                port:
                  number: 80
