kube/caddy-test-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-public
  namespace: caddy-test
spec:
  ingressClassName: caddy-public
  rules:
    - host: "*.juniorfox.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-test
                port:
                  number: 80
